syntax = "proto3";

option csharp_namespace = "AIxplorer.Grpc.Contracts.NLP";

package nlp;

import "google/api/annotations.proto";

// Response containing the answer to a question
message AnswerResponse {
    // The answer derived from the question
    string answer = 1;
}

// Request containing the question 
message QuestionRequest {
    // The question to be answered
    string question = 1;
}

// Service for processing natural language questions and providing answers
service QuestionAnsweringService {
    // Processes a question and returns the answer
    rpc GetAnswer (QuestionRequest) returns (AnswerResponse) {
        option (google.api.http) = {
            post: "/api/nlp/question-answering"
            body: "*"
        };
    }
}
